[tool.poetry]
name = "tiktokx"
version = "0.1.3"
description = "The rhythm of algorithms, dancing through recommendation streams."
authors = ["Kye Gomez <kye@apac.ai>"]

[tool.poetry.dependencies]
python = "*"
numpy = "*"
scipy = "*"
torch = "*"
dgl = "*" 
visdom = "*"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
